# securitycompass-mcp

./: .gitignore  README.md  main.py  pyproject.toml
src/securitycompass_mcp/: __main__.py  server.py  trpc_client.py
src/zeropath_securitycompass_mcp/: __init__.py  __main__.py  server.py  tools.py  trpc_client.py
tests/: test_tools.py
