[project]
name = "securitycompass-mcp"
version = "0.1.0"
description = "MCP server for ZeroPath's Security Compass (SD Elements) integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "ZeroPath", email = "support@zeropath.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "security-compass",
    "sd-elements",
    "zeropath",
    "appsec",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]==1.5.0",
    "requests==2.32.3",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
]

[project.urls]
Homepage = "https://zeropath.com"
Documentation = "https://github.com/ZeroPathAI/securitycompass-mcp#readme"
Repository = "https://github.com/ZeroPathAI/securitycompass-mcp"
Issues = "https://github.com/ZeroPathAI/securitycompass-mcp/issues"

[project.scripts]
securitycompass-mcp = "securitycompass_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/securitycompass_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
